<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="handler"
            type="com.example.tasks.ui.dialogs.DialogEventHandler" />

    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/dark_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingVertical="12dp">

            <TextView
                style="@style/TitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Edit Title" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="6dp"
                android:layout_marginTop="12dp"
                android:background="@color/light_gray" />

            <EditText
                android:id="@+id/title_et_edit"
                style="@style/CustomEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="14dp"
                android:layout_marginTop="24dp"
                android:hint="@string/title"
                android:importantForAutofill="no"
                android:inputType="textCapSentences"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/add_task_tv" />

            <EditText
                android:id="@+id/description_et_edit"
                style="@style/CustomEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="14dp"
                android:layout_marginTop="14dp"
                android:autofillHints="no"
                android:hint="@string/description"
                android:inputType="textMultiLine"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_et_add" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/cancel_title_btn"
                    style="@style/TitleText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/round_solid_bg"
                    android:onClick="@{() -> handler.negativeButton()}"
                    android:text="@string/cancel_button"
                    android:textAllCaps="false"
                    android:textColor="@color/accent_color" />

                <Button
                    android:id="@+id/save_title_btn"
                    style="@style/TitleText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/round_solid_bg"
                    android:backgroundTint="@color/accent_color"
                    android:onClick="@{() -> handler.positiveButton()}"
                    android:text="@string/save_button"
                    android:textAllCaps="false" />

            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</layout>