<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/dark_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingVertical="12dp">

            <TextView
                style="@style/TitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/choose_priority" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="6dp"
                android:layout_marginTop="12dp"
                android:background="@color/light_gray" />

            <com.google.android.material.slider.Slider
                android:id="@+id/priority_slider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="36dp"
                android:stepSize="1"
                android:theme="@style/CustomSlider"
                android:valueFrom="0"
                app:thumbColor="@color/accent_color"
                android:valueTo="3"
                app:haloColor="@android:color/transparent"
                app:tickColor="@color/white"
                app:trackColorInactive="@color/medium_gray"
                app:trackHeight="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/cancel_priority_btn"
                    style="@style/TitleText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/round_solid_bg"
                    android:text="@string/cancel_button"
                    android:textAllCaps="false"
                    android:textColor="@color/accent_color" />

                <Button
                    android:id="@+id/save_priority_btn"
                    style="@style/TitleText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/round_solid_bg"
                    android:backgroundTint="@color/accent_color"
                    android:text="@string/save_button"
                    android:textAllCaps="false" />

            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</layout>