<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="task"
            type="com.example.tasks.data.model.Task" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="24dp"
        tools:context="ui.edit.EditFragment">

        <CheckBox
            android:id="@+id/done_check_edit"
            style="@style/CustomCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="@{task.isDone}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title_tv_edit"
            style="@style/BigText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@{task.title}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/done_check_edit"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Title" />

        <TextView
            android:id="@+id/description_tv_edit"
            style="@style/SubtitleText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hideIfEmpty="@{task.description}"
            android:text="@{task.description}"
            android:textSize="@dimen/default_text_size"
            app:layout_constraintEnd_toEndOf="@+id/title_tv_edit"
            app:layout_constraintStart_toStartOf="@+id/title_tv_edit"
            app:layout_constraintTop_toBottomOf="@+id/title_tv_edit"
            tools:text="Description" />

        <ImageView
            android:id="@+id/time_icon_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/time_description"
            android:src="@drawable/ic_time"
            app:layout_constraintBottom_toBottomOf="@+id/time_tv_edit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/time_tv_edit" />

        <TextView
            style="@style/TitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/task_time"
            app:layout_constraintBottom_toBottomOf="@+id/time_tv_edit"
            app:layout_constraintStart_toEndOf="@+id/time_icon_edit"
            app:layout_constraintTop_toTopOf="@+id/time_tv_edit" />

        <TextView
            android:id="@+id/time_tv_edit"
            style="@style/EditLabelText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@{task.timeToString()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description_tv_edit"
            tools:text="Today at 14:50" />

        <ImageView
            android:id="@+id/category_icon_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/time_description"
            android:src="@drawable/ic_category"
            app:layout_constraintBottom_toBottomOf="@+id/category_tv_edit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/category_tv_edit" />

        <TextView
            style="@style/TitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/task_category"
            app:layout_constraintBottom_toBottomOf="@+id/category_tv_edit"
            app:layout_constraintStart_toEndOf="@+id/time_icon_edit"
            app:layout_constraintTop_toTopOf="@+id/category_tv_edit" />

        <TextView
            android:id="@+id/category_tv_edit"
            style="@style/EditLabelText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@{task.category.toString()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/time_tv_edit"
            tools:text="Category" />

        <ImageView
            android:id="@+id/priority_icon_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/time_description"
            android:src="@drawable/ic_priority"
            app:layout_constraintBottom_toBottomOf="@+id/priority_tv_edit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/priority_tv_edit" />

        <TextView
            style="@style/TitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/task_priority"
            app:layout_constraintBottom_toBottomOf="@+id/priority_tv_edit"
            app:layout_constraintStart_toEndOf="@+id/time_icon_edit"
            app:layout_constraintTop_toTopOf="@+id/priority_tv_edit" />

        <TextView
            android:id="@+id/priority_tv_edit"
            style="@style/EditLabelText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@{task.priority.toString()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/category_tv_edit"
            tools:text="Priority" />

        <LinearLayout
            android:id="@+id/delete_task_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingVertical="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/priority_tv_edit">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/time_description"
                android:src="@drawable/ic_delete"
                app:layout_constraintBottom_toBottomOf="@+id/priority_tv_edit"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/priority_tv_edit" />

            <TextView
                style="@style/TitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/task_delete"
                android:textColor="@color/error"
                app:layout_constraintBottom_toBottomOf="@+id/priority_tv_edit"
                app:layout_constraintStart_toEndOf="@+id/time_icon_edit"
                app:layout_constraintTop_toTopOf="@+id/priority_tv_edit" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>